# messenger

./: LICENSE  README.md  pyproject.toml
backend/: pyproject.toml
backend/src/: alembic.ini  db.py  main.py  models.py  test.db
backend/src/alembic/: env.py
backend/src/alembic/versions/: 5bd6e3fd166a_create_message_table.py  5e9870ab3c08_create_table_uders.py  d8240365cc83_create_table_users.py
backend/src/backend/: login.py  main.py  models.py
backend/src/registration/: models.py  router.py  services.py
backend/src/static/: login.html
backend/src/websocket_chat/: chat.py  models.py
