[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "BasyaZSkot",email = "145144460+BasyaZSkot@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pydentic (>=0.0.1.dev3,<0.0.2)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "authx (>=1.4.3,<2.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "authlib (>=1.6.3,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
